  EntityTablePanel.panelInitialized field added, functionality mirrors EntityPanel
  EntityTablePanel.additionalPopup/ToolbarControls fields added
  DefaultEntityModel.bindTableModelEvents() functionality moved to DefaultEntityTableModel.setEditModel()
  DefaultEntityModel.updateDetailModelsByActiveEntity() privatized
0.5.9
  Entities.getSearchProperties() used to replace a couple of similar code snippets
  /** {@inheritDoc} */ added
  EntityApplicationPanel.loginRequired field added, isLoginRequired() finalized, setter added
  DomainClassGenerator improved
  EntityPanelProvider now handles null editPanelClass
  EntityImpl.writablePropertiesModified() modified
  EntityImpl.getDefaultValueMap() bug fix
  ColumnSearchModel.searchEnabled renamed to enabled
  Entities.getEntityDefinitions() no longer exposes the EntityDefinition class
  ConnectionPoolImpl overhaul
  MySQLDatabase.supportsNowait() overridden, returns false
  Entities.getSearchProperties() bug fixed
  EntityEditPanel.createPropertyPanel(propertyID) added, picks up the input component associated with the property, well duhh
  EntityEditPanel now picks a default LinkType based on the readOnly/updatable status of the underlying property
  EntityTestUnit.initializeReferenceEntities() renamed to initializeReferencedEntities(), refactored and bugfixed
  Entities.getDependencyTree() added
  EntitiesTest added
  EntityApplicationPanel.viewDependencyTree() added to View menu
  EntityDefinition.domainID added
  Entities.getDomainEntityIDs()
  Entities.getDependencyTreeModel() overloaded with a domainID parameter
  EntityTestUnit.createReferenceEntity() renamed to initializeReferenceEntity()
  EntityTestUnit.doSetUp() and doTearDown() added, empty, overridable
  EntityPanel bug fixed, activation event was bound to late, now bound during construction
  EntityEditPanel.addPropertyPanel() added, used throughout